--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <!-- css -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Passing Function Through Props</title>
+    <title>Fetching Data With Axios</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
